fix - titulos e validacao preco do produto

--- a/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<CategoriaViewModel>
+@{
+    ViewData["Title"] = "Categoria";
+}
 
 <div class="container row p-1">
     <div class="col-12 col-lg-8">
