--- a/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<ProdutoViewModel>
-
+@{
+    ViewData["Title"] = "Produto";
+}
 <div class="container row p-1">
     <div class="col-12 col-lg-8">
         <h3>Produtos</h3>
