fix - validacao input preco

--- a/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
@@ -45,7 +45,7 @@
                                     @item.Descricao
                                 </td>
                                 <td class="text-end">
-                                    @item.Preco.ToString("C")
+                                    @((item.Preco ?? 0).ToString("C"))
                                 </td>
                                 <td>
                                     @item.CategoriaNome
