fix - borda tabela de produto

--- a/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Produto/ProdutoIndex.cshtml
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-12">
-                                <table class="table">
+                                <table class="table table-striped border">
                                     <thead>
                                         <tr>
                                             <th>
