--- a/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
@@ -39,7 +39,7 @@
                                             <th>
                                                 Descricao
                                             </th>
-                                            <th class="text-end">
+                                            <th class="text-right">
                                                 Ações
                                             </th>
                                         </tr>
@@ -54,7 +54,7 @@
                                                 <td>
                                                     @item.Descricao
                                                 </td>
-                                                <td class="text-end">
+                                                <td class="text-right">
                                                     <a asp-action="CategoriaUpdate" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
                                                     <a asp-action="CategoriaDelete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash"></i></a>
                                                 </td>
