--- a/CitelSoftwareApplication.Web/Views/Home/Index.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Home/Index.cshtml
@@ -2,7 +2,52 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="content-header">
+    <div class="container-fluid">
+        <h1>Bem-vindo!</h1>
+    </div>
+</section>
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-info">
+                    <div class="inner">
+                        <h3>150</h3>
+                        <p>Produtos</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-bag"></i>
+                    </div>
+                    <a asp-controller="Produto" asp-action="ProdutoIndex" class="small-box-footer">Ver mais <i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-info">
+                    <div class="inner">
+                        <h3>150</h3>
+                        <p>New Orders</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-bag"></i>
+                    </div>
+                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+
+</section>
+
+
+@*<div class="row">
+    <div class="col-12 col-lg-6">
+        <a asp-controller="Produto" asp-action="ProdutoIndex" class="btn btn-primary form-control"><i class="fas fa-box"></i> Produtos</a>
+    </div>
+    <div class="col-12 col-lg-6">
+        <a asp-controller="Categoria" asp-action="CategoriaIndex" class="btn btn-primary form-control"><i class="fas fa-list"></i> Categorias</a>
+    </div>
+</div>*@
