--- a/CitelSoftwareApplication.Web/Views/Shared/_Layout.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-page="/Home" class="nav-link">Home</a>
+                    <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                 </li>
             </ul>
 
@@ -46,7 +46,7 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a asp-page="/Home" class="brand-link">
+            <a asp-controller="Home" asp-action="Index" class="brand-link">
                 <img src="~/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">AdminLTE 3</span>
             </a>
