--- a/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
+++ b/CitelSoftwareApplication.Web/Views/Categoria/CategoriaIndex.cshtml
@@ -24,8 +24,15 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header text-right">
-                        <a asp-action="CategoriaCreate" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Adicionar</a>
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-9">
+                                <span class="card-title">Listagem</span>
+                            </div>
+                            <div class="col-3 text-right">
+                                <a asp-action="CategoriaCreate" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Adicionar</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -55,8 +62,8 @@
                                                     @item.Descricao
                                                 </td>
                                                 <td class="text-right">
-                                                    <a asp-action="CategoriaUpdate" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fas fa-edit"></i></a>
-                                                    <a asp-action="CategoriaDelete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash"></i></a>
+                                                    <a asp-action="CategoriaUpdate" asp-route-id="@item.Id" class="btn btn-warning text-light"><i class="fas fa-edit"></i></a>
+                                                    <a asp-action="CategoriaDelete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                                                 </td>
                                             </tr>
                                         }
